src/objects/Apttus_Config2__PaymentTerm__c.object
<CustomObject>
    <description>Represents a payment term associated with a quote, order or an agreement</description>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The payment term description</description>
        <inlineHelpText>The payment term description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is the default payment for the organization</description>
        <inlineHelpText>Indicates whether this is the default payment for the organization</inlineHelpText>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Label__c</fullName>
        <description>The payment term label</description>
        <inlineHelpText>The payment term label</inlineHelpText>
        <label>Label</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30 Days</fullName>
                </value>
                <value>
                    <fullName>Net 45 Days</fullName>
                </value>
                <value>
                    <fullName>Net 60 Days</fullName>
                </value>
                <value>
                    <fullName>Net 90 days</fullName>
                </value>
                <value>
                    <fullName>Due Upon Receipt</fullName>
                    <default>true</default>
                    <label>Due Upon Receipt</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OffsetOccurrence__c</fullName>
        <description>Indicates how many times a specific offset will occur when calculating the payment term</description>
        <inlineHelpText>Indicates how many times a specific offset will occur when calculating the payment term</inlineHelpText>
        <label>Offset Occurrence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OffsetType__c</fullName>
        <description>Indicates the date the payment term is calculated from</description>
        <inlineHelpText>Indicates the date the payment term is calculated from</inlineHelpText>
        <label>Offset Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Specific Day</fullName>
                </value>
                <value>
                    <fullName>End of Month</fullName>
                </value>
                <value>
                    <fullName>Start of Month</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                    <default>true</default>
                    <label>Day</label>
                </value>
                <value>
                    <fullName>On Receipt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Sequence__c</fullName>
        <description>The payment term display sequence</description>
        <inlineHelpText>The payment term display sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartType__c</fullName>
        <description>Indicates which type of start type will be used to calculate the payment term.</description>
        <inlineHelpText>Indicates which type of start type will be used to calculate the payment term.</inlineHelpText>
        <label>Start Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Specific Day</fullName>
                </value>
                <value>
                    <fullName>End of Quarter</fullName>
                </value>
                <value>
                    <fullName>Start of Quarter</fullName>
                </value>
                <value>
                    <fullName>End of Month</fullName>
                </value>
                <value>
                    <fullName>Start of Month</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Invoice Date</fullName>
                    <default>true</default>
                    <label>Invoice Date</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartValue__c</fullName>
        <description>Indicates the value for the start type which will be used to calculate the payment term.</description>
        <inlineHelpText>Indicates the value for the start type which will be used to calculate the payment term.</inlineHelpText>
        <label>Start Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Value__c</fullName>
        <description>The payment term value</description>
        <inlineHelpText>The payment term value</inlineHelpText>
        <label>Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Payment Term</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>